# LedArrayMicrocontrollerSimulator

./: CMakeLists.txt  Makefile  README.md  embedded_sim.cpp
include/: microLogic.h  microMem.h
src/: main.cpp
src/MicroController/: microLogic.cpp  microMem.cpp
src/ledArray/: ledArray.cpp
